--- a/style.css
+++ b/style.css
@@ -3,3 +3,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.outer-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
+}
