--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 * {
-  margin: 0;
-  padding: 0;
+  margin: 2px;
+  padding: 4px;
   box-sizing: border-box;
 }
 
 .outer-container {
-  height: 100vh;
+  height: 60vh;
   display: flex;
   justify-content: center;
   align-items: center;
